--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/static/icons/favicon.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>DR. Crypto</title>
   </head>
   <body>
     <div id="root"></div>
